--- a/report/main.tex
+++ b/report/main.tex
@@ -26,11 +26,11 @@
 \section*{Abstract}  
   
 \section{Introduction}   
-To keep up with the shorter development cycles of the current times more work has to be done in shorter time. The tools with which this is achieved are optimization of workflows as well as automation. While even the automation of repetitive tasks can be challenging, automating creative tasks like content creation is even more so. This is where noise algorithms provide assistance. They provide a way to generate non-repeating patterns over potentially infinite space at low memory and computational cost. Using these patterns two influence different aspect of the content, anything form additional detail on surfaces up to the layout of whole worlds can be generated automatically. The generated patterns are as varied as the algorithms itself. The different algorithms also provide different levels of influence over the produced pattern. Additional parameters to tune the generated pattern are of course desirable, as a richer set of patterns will be applicable for more situations, therefore offering further automation opportunities.
+To keep up with the shorter development cycles of the current times, more work has to be done in less time. The tools with which this is achieved are optimization of workflows as well as automation. While even the automation of repetitive tasks can be challenging, automating creative tasks like content creation is even more so. This is where noise algorithms provide assistance. They provide a way to generate non-repeating patterns over potentially infinite space at low memory and computational cost. Using these patterns to influence different aspects of the content, anything form additional detail on surfaces up to the layout of whole worlds, can be generated automatically. The generated patterns are as varied as the algorithms itself. The different algorithms also provide different levels of influence over the produced pattern. Additional parameters to tune the generated pattern are of course desirable, as a richer set of patterns will be applicable to more situations, therefore offering further automation opportunities.
 
 
 \section{Related Work}
-Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these are noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms \citeauthor{survey} also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce and oriented pattern instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be precisely controlled. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the Kernel are used. Despite how powerful Gabor noise is, it is still not perfect. One Problem is exhibits is the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality however is a draw back as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
+Particularly interesting are anisotropic noise algorithms. As stated in \cite{survey}, these noise algorithms produce patterns, whose appearance is not invariant to rotation. Besides providing definitions of most noise related terms \citeauthor{survey}, also provide an overview of current Noise algorithms. The noise algorithm proposed by \citeauthor{anisotropicNoise} in \cite{anisotropicNoise} is actually not developed to produce interesting patterns with a discernible direction, but to enable the production of filtered noise to prevent aliasing when the noise texture is viewed at an angle. Today, the term \textit{anisotropic noise} is more commonly used to refer to noise algorithms, which set out to produce oriented patterns instead of ones with integrated filtering. One of these algorithms is the one proposed by \citeauthor{randomPhaseNoise} in \cite{randomPhaseNoise}. \citeauthor{randomPhaseNoise} produce noise by placing cosine functions with random phase, direction and frequency at grid points. By adjusting the way these random values are generated, the power spectrum of the noise can be precisely controlled. The ability to precisely control the power spectrum is a property shared with Gabor Noise as introduced by \citeauthor{gaborNoise} in \cite{gaborNoise}. Gabor Noise is a sparse convolution noise using a poission point process to generate Dirac impulses that are convoluted with the Gabor kernel to produce the final noise. Since this process inherits the power spectrum of the Gabor kernel, which can be adjusted quite precisely, this affords good control over the power spectrum of the noise, especially when differing instances of the Kernel are used. Despite how powerful Gabor noise is, it is still not perfect. One Problem is exhibits is the areas of low contrast, that have never been explicitly specified. This is a conclusion \citeauthor{spectrumOfVariance} also come to. In \cite{spectrumOfVariance} they develop a tool to quantify this local loss of contrast, which they call the spectrum of variance. Based on this, they develop a technique to remove low contrast areas from any noise instance. This generality however is a draw back as much as an advantage, since it can not use any information about the noise generation to achieve lower computation times. This is exactly what \citeauthor{phasorNoise} do in \cite{phasorNoise}. We will later have a more in depth look at their work.\\
 Another big advantage of Gabor noise is its ability to be generated on the surface directly. This does not involve any texture coordinates, so the resulting noise instance does not show any seams. This ability is sought for, as works like \cite{appearanceTextureSynthesis}, \cite{textureSynthesis} and \cite{stripes} show. The former present algorithms, that can synthesise textures directly on surfaces, while the latter addresses a more basic problem. This problem is to find a function on a surface, that varies along a given direction field with a given rate. This is another piece of work we will look at in the following section.
 
 \section{Background}
@@ -134,9 +134,28 @@ One important thing to note is the fact, that this means, that for each point we
   \includegraphics[width=0.45\linewidth]{images/fadedPhaseSineWave}
   \caption{Trying to fade out the phase offset to create a singularity using a Gaussian function. The phase offset (left) is no longer continuous, which leads to a rip in the sine wave (right). Angle is again mapped to hue.}\label{fig:fadedSingularity}
 \end{figure}
-However if we take a left and a right singularity and orient them in such a way, that their boundaries point towards each other, we no longer have this problem. The $0$/$2\pi$ border now has a defined end point. We will call such a pair of singularities a dual singularity. 
+However if we take a left and a right singularity and orient them in such a way, that their boundaries point towards each other, we no longer have this problem. The $0$/$2\pi$ border now has a defined end point. We will call such a pair of singularities a dual singularity. For a pair of Singularities $s_i$ and $t_i$, we can add the following to our generated phase offset:
+$$
+d(\vec{x}) = (a(\vec{x})-\pi)b(\vec{x})
+$$
+with
+$$
+  a(\vec{x}) = \begin{cases}
+  atan(\vec{x}-\vec{s_i}) - \theta, &\text{if }d_s < d_t\\
+  \pi - atan(\vec{x}-\vec{t_i}) + \theta, &\text{otherwise}
+  \end{cases}
+$$
+and
+$$
+  b(\vec{x}) = \begin{cases}
+    e^{\frac{d_s^2}{\sigma^2}}, &\text{if }d_s < d_t \land d_s < d_l\\
+    e^{\frac{d_t^2}{\sigma^2}}, &\text{if }d_t < d_s \land d_t < d_l\\
+    e^{\frac{d_l^2}{\sigma^2}}, &\text{otherwise}\\
+  \end{cases},
+$$
+where $\theta=atan(\vec{t_i}-\vec{s_i})$, $d_s$, $d_t$ and $d_l$ are the distances to $s_i$, $t_i$ and the line connecting the two respectively and $\sigma$ determines the speed at which the dual singularity is faded out.
 \textcolor{red}{formula}
-We also subtract $\pi$ from this phase offset, to make one side dip down a little and the other one increase, instead of just on increasing. This is because to make room for an additional line, the other line shift slightly as can already be seen in figure \ref{fig:fadedSingularity} and is still visible in \ref{fig:dualSingularity}, which shows the phase offset for a dual singularity. However as already mentioned, we assume the existence of wobble, so this small offset is masked.
+Note, that we subtract $\pi$ from this phase offset, to make one side dip down a little and the other one increase, instead of just one increasing. This is because to make room for an additional line, the other lines shift slightly as can already be seen in Figure \ref{fig:fadedSingularity} and is still visible in Figure \ref{fig:dualSingularity}, which shows the phase offset for a dual singularity. However as already mentioned, we assume the existence of wobble, so this small offset is masked.
 
 \begin{figure}[h]
   \centering
